fix issue with status popup visibility

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -168,7 +168,7 @@ input {
   box-shadow: 0 2px 5px 0 #26334D08;
   border: 1px solid #EDEFF2;
   border-radius: 15px;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .grid-row {
